--- a/index.html
+++ b/index.html
@@ -1,67 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>James Joseph Price</title>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<title>James J Price</title>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles/main.css">
-</head>
-<body>
-	<div class="container mt-4">
+
+  </head>
+  <body>
+	
+  	<div class="container mt-2 text-center">
 		<div class="row">
 			<div class="col-sm-12 col-xs-12">
-				<div class="panel panel-primary text-center">
-		  			<div class="panel-heading">James's Website</div>
-		  			<div class="panel-body ">
-		       			<div class="read">
-		       				<p>Hello!</p>
-				       		<p>This is my website.</p>
-				       		<p>Nice.</p>
-		  				</div>
-		       		</div>
-				</div>
+				<div class="card">
+   					<div class="card-header text-white bg-theme-blue mb-3">Welcome to James's Website</div>
+     				<div class="card-body">
+				        <p class="card-text">This website is a work in progress.</p>
+        				<p class="card-text">Thanks for checking it out!</p>
+				    </div>
+    			</div>
 			</div>
 		</div>
-
-		<div class="row">
-			<div class="col-sm-6 col-xs-12">
-				<div class="panel panel-default text-center">
-		  			<div class="panel-heading">What's This About?</div>
-		  			<div class="panel-body ">
-		       			<div class="read">
-		       				<p>This website is here to help me get a job in web development. I created it with help from the LearnCode.academy "Web Development Tutorials for Beginners" YouTube playlist.</p>
-		  				</div>
-		       		</div>
-				</div>
-			</div>
-			<div class="col-sm-6 col-xs-12">
-				<div class="panel panel-default text-center">
-		  			<div class="panel-heading">How Can I Hire You?</div>
-		  			<div class="panel-body ">
-		       			<div class="read">
-		       				<p>Go to my LinkedIn Page <a href="https://www.linkedin.com/in/jamesjprice">HERE</a>
-		  				</div>
-		       		</div>
-				</div>
-			</div>
-		</div>
-
-	</div>
-
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://code.jquery.com/jquery.js"></script>
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 	
-   
 
-</body>
+		<div class="row mt-2">
+ 			<div class="col-sm-6">
+   				<div class="card">
+   					<div class="card-header text-white bg-secondary mb-3">What's This All About?</div>
+      				<div class="card-body">
+				        <p class="card-text">
+				        	
+							This website is here to help me get a job in web development. I created it with help from the LearnCode.academy "Web Development Tutorials for Beginners" YouTube playlist.
 
+				        </p>
+      				</div>
+   				</div>
+  			</div>
+  			<div class="col-sm-6">
+			    <div class="card">
+			   		<div class="card-header text-white bg-secondary mb-3">Need to Hire a Web Developer?</div>
+			      	<div class="card-body">
+				        <p class="card-text">
+
+							Need to hire someone with no experience and minimal competence? Click the button to go to my
+							LinkedIn page and check out my assortment of unendorsed skills.
+
+
+				        </p>
+				        <a href="https://wwww.linkedin.com/in/jamesjprice" class="btn btn-secondary">Hire Me!</a>
+				    </div>
+			    </div>
+			</div>
+		</div>
+	</div>
+
+	
+	
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+  </body>
 </html>
