Fix 'Hire Me' button

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 
 				        </p>
-				        <a href="https://wwww.linkedin.com/in/jamesjprice" class="btn btn-secondary">Hire Me!</a>
+				        <a href="https://www.linkedin.com/in/jamesjprice" class="btn btn-secondary">Hire Me!</a>
 				    </div>
 			    </div>
 			</div>
