--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
   </head>
   <body>
 	
+
+
   	<div class="container mt-2 text-center">
 		<div class="row">
 			<div class="col-sm-12 col-xs-12">
 				<div class="card">
-   					<div class="card-header text-white bg-theme-blue mb-3">Welcome to James's Website</div>
+   					<div class="card-header text-white bg-theme-blue">Welcome to James's Website</div>
      				<div class="card-body">
-				        <p class="card-text">This website is a work in progress.</p>
-        				<p class="card-text">Thanks for checking it out!</p>
+				        <p class="card-text text-custom-gray">This website is a work in progress.</p>
+        				<p class="card-text text-custom-gray">Thanks for checking it out!</p>
 				    </div>
     			</div>
 			</div>
@@ -30,9 +32,9 @@
 		<div class="row mt-2">
  			<div class="col-sm-6">
    				<div class="card">
-   					<div class="card-header text-white bg-secondary mb-3">What's This All About?</div>
+   					<div class="card-header text-white bg-secondary">What's This All About?</div>
       				<div class="card-body">
-				        <p class="card-text">
+				        <p class="card-text text-custom-gray">
 				        	
 							This website is here to help me get a job in web development. I created it with help from the LearnCode.academy "Web Development Tutorials for Beginners" YouTube playlist.
 
@@ -42,9 +44,9 @@
   			</div>
   			<div class="col-sm-6">
 			    <div class="card">
-			   		<div class="card-header text-white bg-secondary mb-3">Need to Hire a Web Developer?</div>
+			   		<div class="card-header text-white bg-secondary">Need to Hire a Web Developer?</div>
 			      	<div class="card-body">
-				        <p class="card-text">
+				        <p class="card-text text-custom-gray">
 
 							Need to hire someone with no experience and minimal competence? Click the button to go to my
 							LinkedIn page and check out my assortment of unendorsed skills.
@@ -63,5 +65,14 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+
+    <script>
+		$(document).ready(function() {
+        
+			$(".card-body").css("background-color", "#3e5984");
+
+		});
+	</script>
+
   </body>
 </html>
