Add \'My Latest Problem\' section

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+	
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>James J Price</title>
@@ -58,8 +59,30 @@
 			    </div>
 			</div>
 		</div>
-	</div>
+	
 
+		<div class="row mt-2">
+ 			<div class="col-sm-12">
+   				<div class="card">
+   					<div class="card-header text-white bg-secondary">My Latest Problem</div>
+      				<div class="card-body">
+				        <p class="card-text text-custom-gray">
+				        	
+							Today I was working on learning Chrome Web Dev Tools at Code School. I ran
+							Chrome's Page Insights Plug In on this site and it said I should enable caching.
+							That led me to a lot of reading on HTTP headers, but in the end I couldn't figure
+							out how to set my own headers to enable caching. I almost created an .htaccess file,
+							but I don't know if that's the solution.
+							<br>
+							Also, I'm getting a lot of calls and emails because I didn't make my WHOIS info
+							private on my new domain. Hope that goes away...
+
+				        </p>
+      				</div>
+   				</div>
+  			</div>
+		</div>
+	</div>
 	
 	
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
