--- a/index.html
+++ b/index.html
@@ -82,6 +82,22 @@
    				</div>
   			</div>
 		</div>
+
+		<div class="row mt-2">
+ 			<div class="col-sm-12">
+   				<div class="card">
+   					<div class="card-header text-white bg-secondary">Slapdash Blog Link</div>
+      				<div class="card-body">
+				        <p class="card-text text-custom-gray">
+				        	
+							<a href="blog.html" class="btn btn-secondary">Check Out My New Blog!</a>
+
+
+				        </p>
+      				</div>
+   				</div>
+  			</div>
+		</div>
 	</div>
 	
 	
