Add button to return home from blog

--- a/blog.html
+++ b/blog.html
@@ -42,6 +42,23 @@
    				</div>
   			</div>
 		</div>
+
+		<div class="row mt-2">
+ 			<div class="col-sm-12">
+   				<div class="card">
+   					<div class="card-header text-white bg-secondary">Slapdash Home Page Link</div>
+      				<div class="card-body">
+				        <p class="card-text text-custom-gray">
+				        	
+							<a href="index.html" class="btn btn-secondary">Go Back to My Home Page</a>
+
+
+				        </p>
+      				</div>
+   				</div>
+  			</div>
+		</div>
+
 	</div>
 	
 	
