--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,29 @@
   </head>
   <body>
 	
-
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<a class="navbar-brand" href="#">Navbar</a>
+		 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="navbar-toggler-icon"></span>
+	  	</button>
+	  
+  		<div class="collapse navbar-collapse" id="navbarNav">
+		    <ul class="navbar-nav">
+			    <li class="nav-item active">
+			    	<a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+			    </li>
+			    <li class="nav-item">
+			    	<a class="nav-link" href="blog.html">Blog</a>
+			    </li>
+			    <li class="nav-item">
+		        	<a class="nav-link" href="photos.html">Photos</a>
+		      	</li>
+		      	<li class="nav-item">
+		        	<a class="nav-link disabled" href="#">Chaos</a>
+		      	</li>
+		    </ul>
+		</div>
+	</nav>
 
   	<div class="container mt-2 text-center">
 		<div class="row">
