--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
 
   </head>
   <body>
+	
 
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<a class="navbar-brand" href="#">Navbar</a>
+	
+	<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+		<a class="navbar-brand" href="index.html">James Joseph Price, Half-Cocked Con Artist</a>
 		 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  	</button>
-	  
+
   		<div class="collapse navbar-collapse" id="navbarNav">
-		    <ul class="navbar-nav">
+		    <ul class="navbar-nav ml-auto	">
 			    <li class="nav-item active">
 			    	<a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
 			    </li>
@@ -37,6 +39,7 @@
 		</div>
 	</nav>
 
+		
   	<div class="container mt-2 text-center">
 		<div class="row">
 			<div class="col-sm-12 col-xs-12">
