--- a/photos.html
+++ b/photos.html
@@ -14,22 +14,18 @@
   <body>
 
 	  
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<a class="navbar-brand" href="#">Navbar</a>
-		 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-	  	</button>
-	  
-  		<div class="collapse navbar-collapse" id="navbarNav">
-		    <ul class="navbar-nav">
-			    <li class="nav-item active">
-			    	<a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+	<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+		<p class="navbar-brand"></p>
+		<div class="collapse navbar-collapse" id="navbarNav">
+		    <ul class="navbar-nav ml-auto	">
+			    <li class="nav-item">
+			    	<a class="nav-link" href="index.html">Home</a>
 			    </li>
 			    <li class="nav-item">
 			    	<a class="nav-link" href="blog.html">Blog</a>
 			    </li>
-			    <li class="nav-item">
-		        	<a class="nav-link" href="photos.html">Photos</a>
+			    <li class="nav-item active">
+		        	<a class="nav-link" href="photos.html">Photos<span class="sr-only">(current)</span></a>
 		      	</li>
 		      	<li class="nav-item">
 		        	<a class="nav-link disabled" href="#">Chaos</a>
@@ -37,7 +33,7 @@
 		    </ul>
 		</div>
 	</nav>
-
+		
 	
   	<div class="card mx-auto mt-2" style="width: 20rem;">
 	  <img class="card-img-top" src="images/corvette.jpg" alt="1970's Era Stingray Corvette">
@@ -46,5 +42,55 @@
 	  </div>
 	</div>
  
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+
+	<script>
+
+		$(document).ready(function() {
+        
+        	// This piece of JQuery is here to show that I know how to change CSS with JQuery
+			$(".card-body").css("background-color", "#c0c3c6");
+
+			// The following global variable is set by an immmediately invoked function expression copied from MDN to create a random number, which will then select at random a tagine for my header
+		   	var i = (function getRandomInt(min, max) {
+				  min = Math.ceil(0);
+				  max = Math.floor(8);
+				  return Math.floor(Math.random() * (max - min)) + min; 
+				}())
+
+			// Don't want to use global variables after watching Douglas Crockford lecture, but it works for now. Eventually I want to use closure to bind the variables.
+         	var brands = [
+
+            "Half-Cocked Con Artist", 
+            "Anachronistic Cow Rustler", 
+            "Pedantic Charlatan",
+            "Opportunistic Malcontent",
+            "Gregarious Psychopath",
+            "Altruistic Son of a Bitch",
+            "Impeccable Shirt Wearer",
+            "Undefined"
+
+            ];
+
+			$(".navbar-brand").text("James Joseph Price, " + brands[i]);
+
+            $(".navbar-brand").click(function () {
+            	
+            	if (i === 7) {
+            		i = 0;
+            	} else {
+ 		           	i = i + 1;
+ 		        };
+
+                $(".navbar-brand").text("James Joseph Price, " + brands[i]);
+
+            });
+
+        });
+
+	</script>
+
   </body>
 </html>
