--- a/blog.html
+++ b/blog.html
@@ -15,6 +15,9 @@
 	
 	<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
 		<p class="navbar-brand"></p>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+   		<span class="navbar-toggler-icon"></span>
+  		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
 		    <ul class="navbar-nav ml-auto	">
 			    <li class="nav-item">
