Try again with this CNAME whatzit

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       				<div class="card-body">
 				        <p class="card-text">
 
-				        	Hey, prospective employer! I am James Price, the guy who copied and pasted this website into existence. I am learning how to be a web developer by creating this ridiculous hodge podge of divs and contrived content. Good luck finding someone better qualified than me. 
+				        	Hey, prospective employer! I am James Price, the guy who copied and pasted this website into existence. I am learning how to be a web developer by creating a ridiculous hodge podge of divs and contrived content. Good luck finding someone better qualified than me. 
 				        	
 				        </p>
       				</div>
